css/styles.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.game-board{
    width: 80%;
    height:500px;
    border: 1px solid #333;
    margin: 0 auto;
    position: relative;
    overflow: hidden;  /* Tudo que sair do quadro(game-board) ficar fora da tela */
}

.pipe{
    position: absolute;/* Para impedir que o comportamento de uma animação não altere o da outra */
    bottom: 0;
    width: 80px;
    right: -80px;
    animation: pipe-animation 3s infinite linear;
}

/* Mudar os valores aqui faz com que o objeto pipe "ande"  */
@keyframes pipe-animation {
    from{
        right: -80px;
    }

    to {
        right: 100%;
    }
}

.mario{
    position: absolute;
    bottom: 0;
    width: 100px;
    left: 0;
    animation: mario-animation 3s infinite linear;
}

@keyframes mario-jump {
    0%{
        bottom: 0;
    }
    50%{
        bottom:180px;
    }

    100% {
        bottom: 0;
    }
}

